<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_pattern"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:shadowColor="#ffffff"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="1"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="100sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="bottom"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_bg"
                android:fontFamily="@font/bodrumsoft_bold"
                android:hint="@string/enter_your_email_hint"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="top"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_bg"
                android:fontFamily="@font/bodrumsoft_bold"
                android:hint="@string/enter_your_password_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/logInEmailPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:shadowColor="#ffffff"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="1"
                android:text="@string/login"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/createAccount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:shadowColor="#ffffff"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="1"
                    android:text="@string/sign_up"
                    android:textSize="25sp" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/logInGoogle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>